reset score + delete items
Ajout possibilité de reste le score et de supprimer des éléments

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
         <button id="add-item">Add Item</button>
     </div>
     <div id="counter-section"></div>
+    <div id="actions-section">
+        <button id="reset-scores">Reset Scores</button>
+        <button id="delete-items">Delete Items</button>
+    </div>
+    <div id="install-section">
+        <button id="install-app" style="display:none;">Install App</button>
+    </div>
     <script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('service-worker.js');
