--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button id="delete-items">Delete Items</button>
     </div>
     <div id="install-section">
-        <button id="install-app" style="display:none;">Install App</button>
+        <button id="install-app" style="">Install App</button>
     </div>
     <script>
         if ('serviceWorker' in navigator) {
