--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Counter App</title>
-    <link rel="stylesheet" href="dist/styles.css">
-    <link rel="manifest" href="manifest.json">
-    <script src="src/js/app.js" defer></script>
+    <link rel="stylesheet" href="./dist/styles.css">
+    <link rel="manifest" href="./manifest.json">
+    <script src="./src/js/app.js" defer></script>
 </head>
 <body class="bg-gray-100 flex flex-col items-center p-5">
     <h1 class="text-2xl font-bold mb-4">Car Counter App</h1>
@@ -24,7 +24,7 @@
     </div>
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('service-worker.js');
+            navigator.serviceWorker.register('./service-worker.js');
         }
     </script>
 </body>
