--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <h1 class="text-2xl font-bold mb-4">Car Counter App</h1>
     <div id="config-section" class="mb-4 flex space-x-2">
         <input type="text" id="item-input" class="border p-2 rounded" placeholder="Enter item">
-        <button id="add-item" class="bg-blue-500 text-white p-2 rounded">Add Item</button>
+        <button id="add-counters" class="bg-blue-500 text-white p-2 rounded">Add Counters</button>
     </div>
     <div id="counter-section" class="mb-4 grid grid-cols-1 sm:grid-cols-2 gap-4">
         <!-- Contenu des éléments ici -->
     </div>
     <div id="actions-section" class="mb-4 space-x-2">
         <button id="reset-scores" class="bg-yellow-500 text-white p-2 rounded">Reset Scores</button>
-        <button id="delete-items" class="bg-red-500 text-white p-2 rounded">Delete Items</button>
+        <button id="delete-counters" class="bg-red-500 text-white p-2 rounded">Delete Counters</button>
     </div>
     <div id="install-section">
         <button id="install-app" class="bg-green-500 text-white p-2 rounded" style="display:none;">Install App</button>
