--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 <body class="bg-gray-100 flex flex-col items-center p-5">
     <h1 class="text-2xl font-bold mb-4">Car Counter App</h1>
     <div id="config-section" class="mb-4 flex space-x-2">
-        <input type="text" id="item-input" class="border p-2 rounded" placeholder="Enter item">
+        <input type="text" id="counters-input" class="border p-2 rounded" placeholder="Enter item">
         <button id="add-counters" class="bg-blue-500 text-white p-2 rounded">Add Counters</button>
     </div>
-    <div id="counter-section" class="mb-4 grid grid-cols-1 sm:grid-cols-2 gap-4">
-        <!-- Contenu des éléments ici -->
+
+    <div id="counter-section" class="mt-6 grid grid-cols-2 gap-x-6 gap-y-10 xl:gap-x-8">
     </div>
+
     <div id="actions-section" class="mb-4 space-x-2">
         <button id="reset-scores" class="bg-yellow-500 text-white p-2 rounded">Reset Scores</button>
         <button id="delete-counters" class="bg-red-500 text-white p-2 rounded">Delete Counters</button>
