--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="manifest" href="./manifest.json">
     <script src="./src/js/app.js" defer></script>
 </head>
-<body>
+<body class="bg-tailly">
     <nav class="bg-gray-800">
         <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
           <div class="relative flex h-16 items-center justify-between">
@@ -60,7 +60,7 @@
         </div>
       </nav>
 
-    <div class="relative mx-auto max-w-2xl bg-gray-100 flex flex-col items-center p-5">
+    <div class="relative mx-auto max-w-2xl flex flex-col items-center p-5">
 
     <div id="config-section" class="mb-4 flex space-x-2" style="display: none;">
         <input type="text" id="counters-input" class="border p-2 rounded" placeholder="Nom du compteur">
