--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tailly Up!</title>
+    <title>Tally Up!</title>
     <link rel="stylesheet" href="./dist/styles.css">
     <link rel="manifest" href="./manifest.json">
     <script src="./src/js/app.js" defer></script>
 </head>
-<body class="bg-tailly">
+<body class="bg-tally">
     <nav class="bg-up">
         <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
           <div class="relative flex h-16 items-center justify-between">
@@ -26,7 +26,7 @@
 
             <div class="pl-12 pr-12 flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
               <div class="flex flex-shrink-0 items-center">
-                <h1 class="text-2xl font-bold text-gray-950">Tailly Up!</h1>
+                <h1 class="text-2xl font-bold text-gray-950">Tally Up!</h1>
               </div>
             </div>
 
