--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,15 +42,17 @@
             </div>
         </div>
 
-        <!-- Mobile menu, show/hide based on menu state. -->
-        <div id="list-section" class="mb-4 flex space-x-2" style="display: none;">
+        <div id="list-section" class=" mx-auto max-w-7xl px-2 sm:px-6 lg:px-8 mb-4 flex" style="display: none;">
             <div id="new-list-form">
                 <input type="text" id="new-list-name" class="border p-2 rounded" placeholder="Nom de la liste">
                 <button onclick="createNewList()" class="bg-blue-500 text-white p-2 rounded">Ajouter</button>
             </div>
-            <div id="lists-container">
-                <!-- Each list will be displayed here -->
+            <div class="hidden sm:block py-4">
+              <div class="flex flex-row flex-wrap justify-start" id="lists-container">
+                <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+              </div>
             </div>
+
         </div>
     </nav>
 
@@ -59,7 +61,7 @@
             <input type="text" id="counters-input" class="border p-2 rounded" placeholder="Nom du compteur">
             <button id="add-counters" class="bg-blue-500 text-white p-2 rounded">Ajouter</button>
         </div>
-        <div id="counter-section" class="mt-6 grid grid-cols-2 gap-x-6 gap-y-10 xl:gap-x-8"></div>
+        <div id="counter-section" class="gap-x-4 grid grid-cols-2 mt-6"></div>
         <div id="actions-section" class="mb-4 space-x-2">
             <button id="reset-scores" class="bg-yellow-500 text-white p-2 rounded">Reset Scores</button>
             <button id="delete-counters" class="bg-red-500 text-white p-2 rounded">Delete Counters</button>
