fix list mobile

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <input type="text" id="new-list-name" class="border p-2 rounded" placeholder="Nom de la liste">
                 <button onclick="createNewList()" class="bg-blue-500 text-white p-2 rounded">Ajouter</button>
             </div>
-            <div class="hidden sm:block py-4">
+            <div class="sm:block py-4">
               <div class="flex flex-row flex-wrap justify-start" id="lists-container">
                 <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
               </div>
