update try to install like APP

--- a/index.html
+++ b/index.html
@@ -71,14 +71,12 @@
         </div>
         <script>
             if ('serviceWorker' in navigator) {
-                window.addEventListener('load', () => {
-                    navigator.serviceWorker.register('./service-worker.js')
-                        .then(registration => {
-                            console.log('Service Worker enregistré avec succès :', registration);
-                        })
-                        .catch(error => {
-                            console.log('Échec de l\'enregistrement du Service Worker :', error);
-                        });
+            navigator.serviceWorker.register('./service-worker.js')
+                .then(registration => {
+                    console.log('Service Worker registered with scope:', registration.scope);
+                })
+                .catch(error => {
+                    console.error('Service Worker registration failed:', error);
                 });
             }
         </script>
