--- a/index.html
+++ b/index.html
@@ -79,13 +79,25 @@
         </div>
         <script>
             if ('serviceWorker' in navigator) {
-                navigator.serviceWorker.register('./service-worker.js')
-                .then(registration => {
-                    console.log('Service Worker registered with scope:', registration.scope);
-                })
-                .catch(error => {
-                    console.error('Service Worker registration failed:', error);
+                navigator.serviceWorker.register('./service-worker.js').then(registration => {
+                    registration.onupdatefound = () => {
+                        const installingWorker = registration.installing;
+                        installingWorker.onstatechange = () => {
+                            if (installingWorker.state === 'installed') {
+                                if (navigator.serviceWorker.controller) {
+                                    // New update available
+                                    showUpdateNotification();
+                                }
+                            }
+                        };
+                    };
                 });
+            }
+
+            function showUpdateNotification() {
+                const updateNotification = document.createElement('div');
+                updateNotification.innerText = 'Une nouvelle version est disponible. Rechargez l\'application pour l\'utiliser.';
+                document.body.appendChild(updateNotification);
             }
         </script>
     </div>
