--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
             <h1 class="text-1xl font-bold tracking-tight sm:text-2xl" id="current-list-name">Default</h1>
             <div id="counter-section" class="gap-x-4 grid grid-cols-2 mt-6"></div>
             <div id="actions-section" class="mb-4 space-x-2">
-                <button id="reset-scores" class="bg-yellow-500 text-white p-2 rounded">Remetre le score à 0</button>
+                <button id="reset-scores" class="bg-yellow-500 text-white p-2 rounded">Remetre les compteurs à 0</button>
             </div>
             <div id="install-section">
-                <button id="install-app" class="bg-green-500 text-white p-2 rounded" style="display:none;">Install App</button>
+                <button id="install-app" class="" style="display:none;"></button>
             </div>
             <script>
                 if ('serviceWorker' in navigator) {
@@ -104,7 +104,7 @@
             </script>
         </div>
 
-        <footer class="fixed mx-auto max-w-2xl flex flex-col items-center p-5 sticky top-[100vh]">Version 1.0.3</footer>
+        <footer class="fixed mx-auto max-w-2xl flex flex-col items-center p-5 sticky top-[100vh]">Version 1.0.4</footer>
     </div>  
 </body>
 </html>
